# MetaJson

./: .gitignore  CMakeLists.txt  README.md
Sample/: CMakeLists.txt  Json.cpp
